--- a/source-static/font/index.css
+++ b/source-static/font/index.css
@@ -6,16 +6,20 @@
 }
 
 .material-icons {
+  display: inline-block;
   font-family: 'Material Icons';
   font-weight: normal;
   font-style: normal;
-  font-size: 24px;
+  font-size: 22px;  /* Preferred icon size */
   line-height: 1;
-  letter-spacing: normal;
   text-transform: none;
-  display: inline-block;
-  white-space: nowrap;
+  letter-spacing: normal;
   word-wrap: normal;
+  white-space: nowrap;
   direction: ltr;
-  -webkit-font-smoothing: antialiased;
+
+  text-rendering: optimizeLegibility; /* Support for Safari and Chrome. */
+  font-feature-settings: 'liga'; /* Support for IE. */
+  -webkit-font-smoothing: antialiased; /* Support for all WebKit browsers. */
+  -moz-osx-font-smoothing: grayscale; /* Support for Firefox. */
 }
